<resources>
    <string name="app_name">Combat Tracker</string>
    <string name="email">Email Address</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign out</string>
    <string name="roll">Roll Die</string>
    <string name="sides_hint">Number of sides</string>
    <string name="roll_history">Most recent roll from others:</string>
    <string name="title_activity_compose">Compose Activity</string>
    <string name="compose">Compose</string>
</resources>