<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashboardFragment">

    <TextView
        android:id="@+id/txt_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#455A64"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_sides"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:inputType="number"
        android:hint="@string/sides_hint"
        app:layout_constraintTop_toBottomOf="@+id/txt_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_roll"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/roll"
        app:layout_constraintTop_toBottomOf="@id/txt_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_sides"/>

    <TextView
        android:id="@+id/txt_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_sides" />

    <TextView
        android:id="@+id/txt_history_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/roll_history"
        android:textColor="@color/purple_200"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txt_roll"/>

    <TextView
        android:id="@+id/txt_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_history_header" />

    <Button
        android:id="@+id/button_compose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/compose"
        app:layout_constraintBottom_toTopOf="@id/button_signout" />

    <Button
        android:id="@+id/button_signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>